argo-cd/overlays/production/argocd-dex-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: dex
        image: dexidp/dex:v2.35.3
