argo-cd/overlays/production/argocd-repo-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: argocd-repo-server
        image: alvarogg777/argocd:v2.2.0
