argo-cd/overlays/production/argocd-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-server
spec:
  template:
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: argocd-server
        image: quay.io/argoproj/argocd:v2.4.0
        command: [argocd-server, --staticassets, /shared/app, --insecure]
