argo-cd/overlays/production/repo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      containers:
      - name: argocd-repo-server
        image: alinbalutoiu/argocd:v2.0.0
        # env:
        # - name: ARGOCD_EXEC_TIMEOUT
        #  value: "300s"
